# wmmp

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.in  README  README.md  THANKS  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
doc/: Makefile  Makefile.am  Makefile.in  WMmp.1
src/: Makefile  Makefile.am  Makefile.in  backlight_off.xpm  backlight_on.xpm  dockapp.c  dockapp.h  libmpdclient.c  mouse_regions.c  mouse_regions.h  mpd_func.c  mpd_func.c~  mpd_func.h  parts.xpm  wmmp.c  wmmp.c~
src/.deps/: dockapp.Po  libmpdclient.Po  mouse_regions.Po  mpd_func.Po  wmmp.Po
